AL-021 - Implementa teste resource user findAll